--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,22 @@
 @import "tailwindcss";
 @import "bootstrap-icons/font/bootstrap-icons.css";
+
+
+/* FIX para Toastify que Tailwind pisa */
+.Toastify__toast-container {
+  z-index: 999999 !important;
+}
+
+.Toastify__toast {
+  z-index: 999999 !important;
+}
+
+.Toastify__toast-body {
+  z-index: 999999 !important;
+}
+
+.Toastify__toast--success,
+.Toastify__toast--info,
+.Toastify__toast--error {
+  z-index: 999999 !important;
+}
